<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Who\'s Up For</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Main_Activity -->
    <string name="ui_main_activity_btn_filter">Filter</string>
    <string name="ui_main_activity_btn_post">Post Event</string>
    <string name="ui_main_activity_dialog_profile_photo">Select profile image</string>
    <string name="ui_tabname_news_feed">News Feed</string>
    <string name="ui_tabname_my_post">My Post</string>
    <string name="ui_tabname_going">Going</string>

    <!-- News_Feed_Fragment -->
    <string name="ui_news_feed_fragment_btn_filter">Filter</string>
    <string name="ui_news_feed_fragment_btn_post">Post Event</string>

    <!-- Select_New_Event_Type_Activity -->
    <string name="title_activity_select_new_event_type">Who\'s Up For</string>

    <!-- Menu -->
    <string name="ui_menu_profile">Profile</string>
    <string name="ui_menu_contacts">Contacts</string>
    <string name="ui_menu_settings">Settings</string>
    <string name="ui_menu_logout">Logout</string>
    <string name="ui_menu_add_new_contact">Add Contacts</string>

    <!-- Edit_Profile_Activity -->
    <string name="title_activity_edit_profile">My Profile</string>
    <string name="ui_edit_profile_activity_profile_photo">Profile photo</string>
    <string name="ui_edit_profile_activity_user_first_name">First Name(required):</string>
    <string name="ui_edit_profile_activity_user_first_name_hint">Your first name here</string>
    <string name="ui_edit_profile_activity_user_last_name">Last Name(required):</string>
    <string name="ui_edit_profile_activity_user_last_name_hint">Your last name here</string>
    <string name="ui_edit_profile_activity_user_email">Email(required):</string>
    <string name="ui_edit_profile_activity_user_email_hint">e.g : abc@dartmouth.edu</string>
    <string name="ui_edit_profile_activity_user_phone">Phone:</string>
    <string name="ui_edit_profile_activity_user_phone_hint">Your phone number here</string>
    <string name="ui_edit_profile_activity_user_gender">Gender:</string>
    <string name="ui_edit_profile_activity_user_gender_female">Female</string>
    <string name="ui_edit_profile_activity_user_gender_male">Male</string>
    <string name="ui_edit_profile_activity_user_class">Class:</string>
    <string name="ui_edit_profile_activity_user_class_hint">e.g : 1769</string>
    <string name="ui_edit_profile_activity_user_major">Major:</string>
    <string name="ui_edit_profile_activity_user_major_hint">e.g : CS</string>
    <string name="ui_edit_profile_activity_user_bio">Bio</string>
    <string name="ui_edit_profile_activity_user_bio_hint">e.g : Andrew is awesome</string>

    <!-- Shared_Preference -->
    <string name="preference_name_edit_profile_activity">account_profile_shared_preference</string>
    <string name="preference_key_edit_profile_activity_profile_first_name">profile_first_name</string>
    <string name="preference_key_edit_profile_activity_profile_last_name">profile_last_name</string>
    <string name="preference_key_edit_profile_activity_profile_email">profile_email</string>
    <string name="preference_key_edit_profile_activity_profile_phone">profile_phone</string>
    <string name="preference_key_edit_profile_activity_profile_gender">profile_gender</string>
    <string name="preference_key_edit_profile_activity_profile_class">profile_class</string>
    <string name="preference_key_edit_profile_activity_profile_major">profile_major</string>
    <string name="preference_key_edit_profile_activity_profile_bio">profile_bio</string>
    <string name="preference_key_edit_profile_photo_file_name">profile_photo.png</string>

    <!-- Button -->
    <string name="ui_btn_save">Save</string>
    <string name="ui_btn_post">Post</string>
    <string name="ui_btn_cancel">Cancel</string>
    <string name="ui_btn_event_type_food">Food</string>
    <string name="ui_btn_event_type_sports">Sports</string>
    <string name="ui_btn_event_type_study">Study</string>
    <string name="ui_btn_event_type_movie">Movie</string>
    <string name="ui_btn_event_type_party">Party</string>
    <string name="ui_btn_event_type_add_new">+</string>

    <!-- Create_New_Event_Activity -->
    <string name="title_activity_create_new_event">Who\'s Up For</string>
    <string name="ui_create_new_event_activity_whos">Who\'s</string>
    <string name="ui_create_new_event_activity_up4">Up4</string>
    <string name="ui_create_new_event_activity_up4_hint">e.g : EBA</string>
    <string name="ui_create_new_event_activity_date">Date</string>
    <string name="ui_create_new_event_activity_starts">Starts</string>
    <string name="ui_create_new_event_activity_starts_hint">Enter start date and time</string>
    <string name="ui_create_new_event_activity_ends">Ends</string>
    <string name="ui_create_new_event_activity_ends_hint">Enter end data and time</string>
    <string name="ui_create_new_event_activity_location">Location</string>
    <string name="ui_create_new_event_activity_location_hint">Optional</string>
    <string name="ui_create_new_event_activity_comments">Comments</string>
    <string name="ui_create_new_event_activity_comments_hint">Your comments here</string>

    <!-- Event_Detail_Activity -->
    <string name="title_activity_event_details">Who\'s Up For</string>
    <string name="ui_event_detail_activity_type">Event type</string>
    <string name="ui_event_detail_activity_type_hint">na</string>
    <string name="ui_event_detail_activity_name">na</string>
    <string name="ui_event_detail_activity_location">Location</string>
    <string name="ui_event_detail_activity_location_detail">na</string>
    <string name="ui_event_detail_activity_start_date_time">Start</string>
    <string name="ui_event_detail_activity_start_date_time_detail">na</string>
    <string name="ui_event_detail_activity_end_date_time">End</string>
    <string name="ui_event_detail_activity_end_date_time_detail">na</string>
    <string name="ui_event_detail_activity_detail">Detail</string>
    <string name="ui_event_detail_activity_detail_hint"> </string>
    <string name="ui_event_detail_activity_going">Going</string>
    <string name="ui_event_detail_activity_not_going">Decline</string>
    

    <!-- Dialog -->
    <string name="ui_dialog_profile_photo">Select profile image</string>
    <string name="ui_dialog_pick_start_date">Pick start date</string>
    <string name="ui_dialog_pick_start_time">Pick start time</string>
    <string name="ui_dialog_pick_end_date">Pick end date</string>
    <string name="ui_dialog_pick_end_time">Pick end time</string>
    <string name="ui_dialog_ok">OK</string>
    <string name="ui_dialog_cancel">Cancel</string>

    <!-- Fragment_Filter_Dialog -->
    <string name="ui_fragment_filter_dialog_event_type">Event Type</string>
    <string name="ui_fragment_filter_dialog_circle">Circle</string>
    <string name="ui_fragment_filter_dialog_event_type_food">Food</string>
    <string name="ui_fragment_filter_dialog_event_type_sports">Sports</string>
    <string name="ui_fragment_filter_dialog_event_type_study">Study</string>
    <string name="ui_fragment_filter_dialog_event_type_movie">Movie</string>
    <string name="ui_fragment_filter_dialog_event_type_party">Party</string>
    <string name="ui_fragment_filter_dialog_circle_friends">Friends</string>
    <string name="ui_fragment_filter_dialog_circle_cs65">CS65</string>
    <string name="ui_fragment_filter_dialog_circle_public">Public</string>

    <!-- Contacts_Activity -->
    <string name="title_activity_contacts">Contacts</string>
    <string name="ui_contacts_activity_contacts">Contacts</string>
    <string name="ui_contacts_activity_delete">delete</string>

    <!-- Settings_Activity -->
    <string name="title_activity_settings">Settings</string>
    <string name="ui_settings_activity_notifications">Notifications</string>
    <string name="ui_settings_activity_privacy">Privacy</string>
    <string name="ui_settings_activity_about">About</string>
    <string name="ui_settings_activity_donations">Donations</string>
    <string name="ui_settings_activity_like_us_on_facebook">Like us on Facebook</string>
    <string name="ui_settings_activity_like_us_on_twitter">Like us on Twitter</string>
    <string name="title_activity_login">Login</string>

</resources>